--- a/index.html
+++ b/index.html
@@ -92,47 +92,35 @@ header label:hover {
 <header>
 			<nav class="menu">
 				<ul>
-					<li><a href="#">AnaSayfa</a></li>
-					<li><a href="#">Hakkımda</a></li>
-					<li><a href="#">İletişim</a></li>
 				</ul>
 			</nav>
 		</header>
 </head>
 <body>
-<h1 class="font_0" style=" text-align:center; font-size:43px; line-height:1.2em;"><span style="font-size:43px;"><span class="color_11"><span style="text-shadow:rgba(0, 0, 0, 0.498039) -1px -1px 0px, rgba(0, 0, 0, 0.498039) -1px 1px 0px, rgba(0, 0, 0, 0.498039) 1px 1px 0px, rgba(0, 0, 0, 0.498039) 1px -1px 0px;"><span style="letter-spacing:0.05em; ">Counter-Strike:Global Offensive | Reborn Hack </span></span></span></span></h1>
+<h1 class="font_0" style=" text-align:center; font-size:43px; line-height:1.2em;"><span style="font-size:43px;"><span class="color_11"><span style="text-shadow:rgba(0, 0, 0, 0.498039) -1px -1px 0px, rgba(0, 0, 0, 0.498039) -1px 1px 0px, rgba(0, 0, 0, 0.498039) 1px 1px 0px, rgba(0, 0, 0, 0.498039) 1px -1px 0px;"><span style="letter-spacing:0.05em; ">League Of Legends | PratikHack Safe External Script (SES) </span></span></span></span></h1>
 <div class="w-line" style="margin: 34px auto; width: 100%; height: 6px; background-color: #2b6ca3; clear: both;"></div>
-<p class="font_8" style="font-family: avenir-lt-w01_35-light1475496,sans-serif; line-height: 1.5em; text-align: center; font-size: 16px;"><span style="color: #cb2026;"><span style="font-weight: bold;"><span style="font-size: 16px;">Program Nasıl Kullanılır : </span></span></span></p>
-<p class="font_8" style="font-family: avenir-lt-w01_35-light1475496,sans-serif; line-height: 1.5em; text-align: center; font-size: 16px;"><span style="color: #cb2026;"><span style="font-weight: bold;"><span style="font-size: 16px;">1- Programı çalıştırıp s*kim sonik sorularını cevapladıktan sonra Loader'a giriş yapıyorsunuz</span></span></span></p>
-<p class="font_8" style="font-family: avenir-lt-w01_35-light1475496,sans-serif; line-height: 1.5em; text-align: center; font-size: 16px;"><span style="color: #cb2026;"><span style="font-weight: bold;"><span style="font-size: 16px;">2- Loader'in Inject ekranında oyuna giriş yapıyorsunuz</span></span></span></p>
-<p class="font_8" style="font-family: avenir-lt-w01_35-light1475496,sans-serif; line-height: 1.5em; text-align: center; font-size: 16px;"><span style="color: #cb2026;"><span style="font-weight: bold;"><span style="font-size: 16px;">3- CSGO açıldıktan sonra oyunda lobideyken programa dönüp "Inject" butonuna basıyorsunuz ve gelen mesaja tamam dedikten sonra çıkış butonu ile programı kapatıp oyuna dönüyorsunuz.</span></span></span></p>
-<p class="font_8" style="font-family: avenir-lt-w01_35-light1475496,sans-serif; line-height: 1.5em; text-align: center; font-size: 16px;"><span style="color: #cb2026;"><span style="font-weight: bold;"><span style="font-size: 16px;">4- Artık Hilemiz oyuna injectlendi özellikler Emrinize amade.</span></span></span></p>
 <div id="innercomp_kh4x23qh" class="s_heNoSkinPhoto" style=";width: 133px; height: 73px; position: static; display: block; clear: both; margin: 10px auto 10px auto;" title="" data-is-responsive="false" data-display-mode="fitWidthStrict" data-content-padding-horizontal="0" data-content-padding-vertical="0" data-exact-height="72.03523131672597">
 <div id="innercomp_kh4x23qhlink" class="s_heNoSkinPhotolink" style="width: 133px; height: 73px;">
 <div style="width: 133px; height: 73px; position: relative; top: 0; left: 0;" data-has-bg-scroll-effect="" data-style="" data-image-info="{&quot;imageData&quot;:{&quot;type&quot;:&quot;Image&quot;,&quot;uri&quot;:&quot;17ce6e_89119cd10147431d98bf95cc7fdce390~mv2.png&quot;,&quot;title&quot;:&quot;&quot;,&quot;width&quot;:281,&quot;height&quot;:153},&quot;displayMode&quot;:&quot;fitWidth&quot;}"><img id="innercomp_kh4x23qhimgimage" style="width: 133px; height: 73px; object-fit: contain;" src="https://raw.githubusercontent.com/PratikHackTR/PratikHackdownload.github.io/master/not.png" alt="" data-type="image" /></div>
 </div>
 </div>
-<p class="font_8" style="font-family: avenir-lt-w01_35-light1475496,sans-serif; line-height: 1.5em; text-align: center; font-size: 16px;"><span style="color: #cb2026;"><span style="font-weight: bold;"><span style="font-size: 16px;"> Takipte kalın VAC'sız bir External (yani oyuna injecte ederek değil dışarıdan çalışan) bir WH paylaşıcam </span></span></span></p>
+<p class="font_8" style="font-family: avenir-lt-w01_35-light1475496,sans-serif; line-height: 1.5em; text-align: center; font-size: 16px;"><span style="color: #cb2026;"><span style="font-weight: bold;"><span style="font-size: 16px;"> Python , DX9 Şart </span></span></span></p>
 <div class="w-line" style="margin: 34px auto; width: 100%; height: 6px; background-color: #2b6ca3; clear: both;"></div>
 <div id="innercomp_txtMediap73" class="s_rDcVideoSkin" style="height: 354.375px; width: 630px; ;position: static; display: block; clear: both; margin: 10px auto 10px auto;">
-<div class="PHyoutube">Kullanım videosu
+<div class="PHyoutube">Kullanım & Kurulum videosu
 <iframe width="630" height="354.375" src="https://www.youtube.com/embed/ryt00uQlqzc" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </div>
 <div class="w-line" style="margin: 34px auto; width: 100%; height: 6px; background-color: #2b6ca3; clear: both;"></div>
 <div id="innercomp_txtMedia1b7g" class="s_heNoSkinPhoto" style=";width: 303px; height: 87px; position: static; display: block; clear: both; margin: 10px auto 10px auto;" title="İndirmek için tıklayın" data-is-responsive="false" data-display-mode="fitWidthStrict" data-content-padding-horizontal="0" data-content-padding-vertical="0" data-exact-height="86.91736526946107">
-<a href="http://tr.link/llPL"><img src="https://raw.githubusercontent.com/PratikHackTR/PratikHackdownload.github.io/master/indir.png"></a>
-</div>
-<p class="font_8" style="font-family: avenir-lt-w01_35-light1475496,sans-serif; font-size: 16px; text-align: center;"><span style="font-weight: bold;"><span class="inherit-font-size" style="font-size: 16px;"><span style="color: #cb2026;"> Linkler 3 kere kısaltılmıştır Sağ üst köşeden "</span><span style="color: #6fa33f;">Reklamı Geç</span><span style="color: #cb2026;">" diyerek indirme sayfasına gidebilirsiniz...</span></span></span></p>
-<div id="innercomp_txtMedia5g7" class="s_heNoSkinPhoto" style=";width: 328px; height: 59px; position: static; display: block; clear: both; margin: 10px auto 10px auto;" title="PratikHack Anti A.T.A.K programının vir&uuml;s sonuç;ları" data-is-responsive="false" data-display-mode="fitWidthStrict" data-content-padding-horizontal="0" data-content-padding-vertical="0" data-exact-height="58.800000000000004">
-<a href="http://tr.link/X5cwi8"><img src="https://raw.githubusercontent.com/PratikHackTR/PratikHackdownload.github.io/master/virustotal.png"></a>
+<a href="PHSCindirme linki GELECEK BURAYA"><img src="https://raw.githubusercontent.com/PratikHackTR/PratikHackdownload.github.io/master/indir.png"></a>
 </div>
 
 </body>
 <footer>
 <div class="w-line" style="margin: 34px auto; width: 100%; height: 6px; background-color: #2b6ca3; clear: both;"></div>
 <div id="altfooter">
-<p style="line-height:90px;">| <a href="https://www.youtube.com/c/PratikHack01">Youtube</a>  / <a href="https://www.instagram.com/burak_demirr01">Instagram</a> \ <a href="https://www.facebook.com/PratikHackOfficial">Facebook</a> | </p>
+<p style="line-height:90px;">| <a href="https://www.youtube.com/c/PratikHack01">Youtube</a>  / <a href="https://www.instagram.com/burak_demirr01">Instagram</a> \ <a href="https://will be added soon..">Discord</a> | </p>
  </div>
 </footer>
 </html>
